--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <header class="page__header">
       <nav class="navbar__menu">
         <!-- Navigation starts as empty UL that will be populated with JS -->
+        <!-- For this version of the project, we will build with bare CSS
+              The next version will include an update to using the DOM
+        -->
         <ul id="navbar__list">
           <li><a href="#">PinkPink.</a></li>
           <li><a href="#">Showcase</a></li>
